# failure-driven-systems

./: .gitignore  AGENT.md  README.md  pyproject.toml
.prompts/: PROMPT_01.txt  PROMPT_02.txt  PROMPT_03.txt  PROMPT_04.txt  PROMPT_05.txt  PROMPT_06.txt  PROMPT_07.txt  PROMPT_08.txt  PROMPT_09.txt  PROMPT_10.txt  PROMPT_11.txt  PROMPT_12.txt  PROMPT_13.txt  PROMPT_14.txt  PROMPT_15.txt  PROMPT_16.txt  PROMPT_17.txt  PROMPT_18.txt  PROMPT_19.txt  PROMPT_20.txt  PROMPT_21.txt  PROMPT_22.txt  PROMPT_23.txt  PROMPT_24.txt  PROMPT_25.txt  PROMPT_26.txt  PROMPT_27.txt  PROMPT_28.txt  PROMPT_29.txt  PROMPT_30.txt  PROMPT_31.txt  PROMPT_32.txt  PROMPT_33.txt  PROMPT_34.txt  PROMPT_35.txt  PROMPT_36.txt  PROMPT_37.txt  PROMPT_38.txt  PROMPT_39.txt  PROMPT_40.txt
curriculum/: PHASE_PLAN.md  README.md
docs/: ASSISTANT_WORKFLOW.md  COMMIT_DISCIPLINE.md  CONSTRAINTS.md  DOCTRINE.md  DOMAIN.md  REPO_MAP.md  SYSTEM_EVOLUTION.md  TECH_STACK.md
reviews/llm/: README.md  TEMPLATE_interview_me.md  TEMPLATE_review_my_work.md
scripts/: verify.sh
services/api/opledger_api/: __init__.py  config.py  health.py  main.py
services/api/tests/: test_health.py
