[project]
name = "failure-driven-systems"
version = "0.1.0"
description = "Failure-Driven Systems curriculum and OpsLedger API scaffold."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.3,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "uvicorn[standard]>=0.30.6,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2,<1.0.0",
    "mypy>=1.11.2,<2.0.0",
    "pytest>=8.3.3,<9.0.0",
    "ruff>=0.6.9,<1.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
pythonpath = ["services/api"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["services/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["services/api"]
files = ["services/api/opledger_api", "services/api/tests"]
